<?xml version="1.0" encoding="UTF-8"?>
<resources>


    <string-array name="numberofpeoplearray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="app_name">Stan\'s Blue Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="loading_empty">no data</string>


    <string name="menufragment1">Appetizers</string>
    <string name="menufragment2">Meals</string>
    <string name="menufragment3">Others</string>

    <string name="namelabel">"Name : "</string>
    <string name="action_settings">"action settings"</string>

    <string name="timerstart">00:00:00</string>
    <string name="timerdone">Go Home."</string>
    <string name="textpercentsign">&#37;</string>
    <string name="textLbl1">Total: $</string>
    <string name="textLbl2">number of people</string>
    <string name="textLbl3">Tip Percentage</string>
    <string name="rdoTxt15">15%</string>
    <string name="rdoTxt20">20%</string>
    <string name="rdoTxtOther">Other</string>
    <string name="btnReset">Reset</string>
    <string name="btnCalculate">Calculate</string>
    <string name="textLbl4">Tip:</string>
    <string name="textLbl5">Total: </string>
    <string name="textLbl6">per Person:</string>
    <string name="cocktail1">Lynchburg Lemonade</string>
    <string name="cocktail2">Blood Orange Cosmo</string>
    <string name="cocktail3">Stan\'s Margarita</string>
    <string name="cocktail4">Honey Badger</string>
    <string name="cocktail5">Stan\'s Volcano</string>
    <string name="cocktail6">Oak and Cola</string>
    <string name="cocktail7">Eastside Connection</string>
    <string name="cocktailchoicemade">I\'ve made my choice.</string>
    <string name="cocktails">Cocktails</string>
    <string name="mainpage2">Gmail</string>
    <string name="menu">Menu</string>
    <string name="ontap">On Tap</string>
    <string name="ontap2">Texas on Tap</string>
    <string name="dir">Directions</string>
    <string name="taxi">Call Cab</string>
    <string name="tc">Tip Calc</string>
    <string name="tl">Time Left</string>
    <string name="close">EXIT</string>
    <string name="call">Call</string>
    <string name="beerlist">Beer List</string>
    <string name="column1header">BEER</string>
    <string name="column2header">COUNTRY or STATE</string>
    <string name="column3header">A.B.V</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sortbylabel">Sort By</string>
    <string name="namelabel2">NAME</string>
    <string name="fromlabel">FROM</string>
    <string name="typelabel">TYPE</string>
    <string name="abvlabel">ABV</string>
    <string name="countrylabel">Country</string>
    <string name="menuitem">item</string>
    <string name="menuprice">price</string>


    <string name="enter_notification_text">enter notification text</string>
    <string name="send_notification_to">Send notification to</string>
    <string name="send">Send</string>
    <string name="sort">sort</string>
    <string name="title_activity_maps">Map</string>
    <string name="you_re_here">You\'re here.</string>
    <string name="name">name</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="dnp">DNP</string>
    <string name="favs">favs</string>
    <string name="_0">0</string>
    <string name="radiobutton">RadioButton</string>
    <string name="in_hood">in hood</string>
    <string name="alive">alive?</string>
    <string name="in_house">in house</string>

    <string name="login_success_message">Login successful! This concludes an example.</string>
    <string name="login_text">Log in</string>
    <string name="logout_text">Log out</string>
    <string name="facebook_button_text">Facebook</string>
    <string name="twitter_button_text">Twitter</string>
    <string name="register_text">Register</string>
    <string name="restore_link">restore</string>
    <string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>
    <string name="restore_password_page_name">Password Restoration</string>
    <string name="registration_page_name">Registration</string>
    <string name="login_prompt">Login:</string>
    <string name="password_prompt">Password:</string>
    <string name="password_recovery_page_name">Password Recovery</string>
    <string name="warning_icon_description">warning icon</string>
    <string name="remember_login_text">Remember me</string>
    <string name="deviceID_field_prompt">DeviceID:</string>
    <string name="email_field_prompt">Email:</string>
    <string name="favorites_field_prompt">Favorites:</string>
    <string name="gender_field_prompt">Gender:</string>
    <string name="id_field_prompt">Id:</string>
    <string name="leaderboard_field_prompt">Leaderboard:</string>
    <string name="name_field_prompt">Name:</string>
    <string name="password_field_prompt">Password:</string>
    <string name="default_registered_text">Registered successfully!</string>
    <string name="registration_success_message">Thank you for registering with the %1$s. Click the button below to proceed to the login.</string>
    <string name="service_name">Stan\'s Blue Note</string>
    <string name="service_type">User Service</string>
    <string name="loggedIn_text">You are now successfully logged in.\nThis concludes the example. Use the button below to logout.</string>
    <string name="registered_text">Thank you for registering!\nYou can use your email to login.</string>

</resources>
