<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:clickable="false"
              android:orientation="vertical"
              android:baselineAligned="false"
    android:gravity="center_vertical|center_horizontal">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:padding="5dp">

        <TextView
        android:id="@+id/nameTxt"
            android:layout_height="wrap_content"

            android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#97B3EF"
            android:layout_width="0dp"
            android:text="@string/name"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/timeTxt"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#97B3EF"
            android:layout_width="0dp"
            android:text="@string/_12_00_pm"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:text="@string/favs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFavs"
        tools:text="favorite drinks"
        android:textColor="#97B3EF" />

    <TextView
        android:text="@string/dnp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLeaderboard"
        tools:text="leaderboard"
        android:textColor="#97B3EF" />


</LinearLayout>