<?xml version="1.0" encoding="UTF-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:background="@android:color/transparent">

    <!-- Using table layout to have HTML table like control over layout -->

    <RelativeLayout
        android:id="@+id/RelativeLayoutTip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:stretchColumns="1"
        android:background="@drawable/chalkboard">

        <!-- Row 1: Text label placed in column zero, text field placed in column
            two and allowed to span two columns. So a total of 4 columns in this row -->

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtLbl1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:gravity="center|right"
            android:text="@string/textLbl1"
            android:textColor="@color/WhiteSmoke"
            android:textSize="22sp"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/txtAmount"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/txtLbl1"
            android:background="@drawable/editextborder"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:textColor="@color/WhiteSmoke"
            android:textSize="22sp"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtLbl2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@id/txtLbl1"
            android:layout_margin="5dp"
            android:gravity="center|right"
            android:text="@string/textLbl2"
            android:textColor="@color/WhiteSmoke"
            android:textSize="22sp"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/txtPeople"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/txtAmount"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/txtLbl2"
            android:background="@drawable/editextborder"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textColor="@color/WhiteSmoke"
            android:textSize="22sp"
            pixlui:typeface="chalkdust.ttf" />

        <RadioGroup
            android:id="@+id/RadioGroupTips"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/txtLbl2"
            android:layout_margin="5dp"
            android:checkedButton="@+id/radioTwenty"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioFifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/LightGrey"
                android:text="@string/rdoTxt15"
                android:textColor="@color/Black"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioTwenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/LightGrey"
                android:text="@string/rdoTxt20"
                android:textColor="@color/Black"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/LightGrey"
                android:text="@string/rdoTxtOther"
                android:textColor="@color/Black"
                android:textSize="15sp" />
        </RadioGroup>

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/txtTipOther"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@id/RadioGroupTips"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/editextborder"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number"
            android:textColor="@color/WhiteSmoke"
            android:textSize="28sp"
            android:visibility="invisible"
            pixlui:typeface="chalkdust.ttf" />

        <requestFocus />

        <TextView
            android:id="@+id/txtpercentsign"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@id/RadioGroupTips"

            android:text="@string/textpercentsign"
            android:textColor="@color/WhiteSmoke"
            android:textSize="28sp"
            android:visibility="invisible"

            android:layout_marginLeft="50dp" />

        <Button
            android:id="@+id/btnReset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTipOther"
            android:layout_margin="5dp"
            android:text="@string/btnReset" />

        <Button
            android:id="@+id/btnCalculate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTipOther"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/btnReset"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btnCalculate" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtLbl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnReset"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/txtLbl4"
            android:background="@null"
            android:paddingRight="10dp"
            android:text="@string/textLbl4"
            android:textColor="@color/WhiteSmoke"
            android:textSize="20sp"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/txtTipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCalculate"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/txtLbl4"
            android:background="@null"
            android:gravity="left"
            android:inputType="none"
            android:textColor="@color/Yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtLbl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLbl4"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@null"
            android:paddingRight="10dp"
            android:text="@string/textLbl5"
            android:textColor="@color/WhiteSmoke"
            android:textSize="20sp"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/txtTotalToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTipAmount"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/txtLbl5"
            android:background="@null"
            android:gravity="left"
            android:inputType="none"
            android:textColor="@color/Wheat"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtLbl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLbl5"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@null"
            android:paddingRight="10dp"
            android:text="@string/textLbl6"
            android:textColor="@color/WhiteSmoke"
            android:textSize="20sp"
            pixlui:typeface="chalkdust.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/txtTipPerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTotalToPay"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/txtLbl6"
            android:background="@null"
            android:gravity="right"
            android:inputType="none"
            android:textColor="@color/LightGreen"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            pixlui:typeface="chalkdust.ttf" />

    </RelativeLayout>

</ScrollView>