<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/popup_bg"
    android:elevation="2dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/send_notification_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:id="@+id/textViewTitleForEditText"
        android:layout_above="@+id/et"
        android:layout_alignLeft="@+id/et"
        android:layout_alignStart="@+id/et"
        android:textColor="@color/White"
        android:gravity="center" />

    <Button
        android:text="on Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/onMap"
        android:layout_alignBaseline="@+id/textViewTitleForEditText"
        android:layout_alignBottom="@+id/textViewTitleForEditText"
        android:layout_alignParentEnd="false"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:background="@drawable/edittext_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_notification_text"
        android:layout_centerInParent="true"
        android:gravity="top"
        android:textSize="@dimen/dp16"
        android:layout_height="150dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et"
        android:layout_centerHorizontal="true"
        android:id="@+id/sendButton"
        android:layout_gravity="center_horizontal" />

</LinearLayout>